--- a/package.json
+++ b/package.json
@@ -8,11 +8,20 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.0.0-next.22",
+    "@react-navigation/material-top-tabs": "^6.0.0-next.18",
+    "@react-navigation/native": "^6.0.0-next.17",
     "expo": "~42.0.1",
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native-gesture-handler": "~1.10.2",
+    "react-native-pager-view": "^5.4.0",
+    "react-native-reanimated": "~2.2.0",
+    "react-native-safe-area-context": "3.2.0",
+    "react-native-screens": "~3.4.0",
+    "react-native-tab-view": "^3.0.1",
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
